--- a/src/main/resources/AdminProfile.fxml
+++ b/src/main/resources/AdminProfile.fxml
@@ -10,38 +10,39 @@
       xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="org.example.AdminProfileController"
       alignment="TOP_CENTER"
-      spacing="15"
-      style="-fx-padding: 20;">
+      spacing="25"
+      style="-fx-padding: 40 0 0 0;">
 
     <children>
-        <Label text="Admin Profili">
-            <font>
-                <Font name="System Bold" size="20"/>
-            </font>
-        </Label>
 
-        <VBox spacing="10"
-              maxWidth="400"
+        <VBox spacing="16"
+              maxWidth="420"
+              alignment="TOP_CENTER"
               style="
-                  -fx-background-color: rgba(255,255,255,0.95);
-                  -fx-background-radius: 18;
-                  -fx-padding: 20;
+                  -fx-background-color: rgba(255,255,255,0.78);
+                  -fx-background-radius: 30;
+                  -fx-padding: 25 35 30 35;
               ">
             <effect>
-                <DropShadow radius="10" offsetY="4"
-                            color="rgba(0,0,0,0.25)"/>
+                <DropShadow radius="25"
+                            offsetY="4"
+                            color="rgba(0,0,0,0.30)"/>
             </effect>
 
             <children>
+
+                <Label text="Admin Profili"
+                       style="-fx-font-size: 20; -fx-font-weight: bold;"/>
+
                 <Label text="Ad Soyad:"
                        style="-fx-font-weight: bold;"/>
-                <Label fx:id="lblAdminName"
-                       text="-" />
+                <Label fx:id="lblAdminName" text="-"/>
 
-                <Label text="Rol:"
-                       style="-fx-font-weight: bold;"/>
-                <Label text="Admin" />
+                <Label text="Rol:" style="-fx-font-weight: bold;"/>
+                <Label text="Admin"/>
+
             </children>
         </VBox>
+
     </children>
 </VBox>
