--- a/src/main/resources/Main.fxml
+++ b/src/main/resources/Main.fxml
@@ -15,9 +15,10 @@
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="org.example.MainController"
             style="
-                -fx-background-image: url('/images/kutuphane.png');
-                -fx-background-size: cover;
+                -fx-background-image: url('/images/anakutup.png');
+                -fx-background-size: 100% 100%;
                 -fx-background-position: center center;
+                -fx-background-repeat: no-repeat;
             ">
 
     <top>
@@ -98,8 +99,9 @@
                                               promptText="Kitap Adı"
                                               style="
                                                   -fx-background-color: #f3efff;
-                                                  -fx-background-radius: 18;
-                                                  -fx-border-radius: 18;
+                                                  -fx-background-radius: 24;
+                                                  -fx-border-radius: 24;
+                                                  -fx-background-insets: 0;
                                                   -fx-border-color: #6c5ce7;
                                                   -fx-border-width: 1;
                                                   -fx-padding: 4 10 4 10;
