--- a/src/main/resources/UserProfile.fxml
+++ b/src/main/resources/UserProfile.fxml
@@ -3,79 +3,76 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.effect.DropShadow?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/25"
+<AnchorPane xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="org.example.UserProfileController">
+            fx:controller="org.example.UserProfileController"
+            prefWidth="600" prefHeight="500">
 
     <children>
-        <VBox spacing="20.0" prefHeight="400.0" prefWidth="600.0">
-            <padding>
-                <Insets top="20.0" right="20.0" bottom="20.0" left="20.0"/>
-            </padding>
+        <VBox alignment="CENTER"
+              spacing="20"
+              maxWidth="420"
+              prefWidth="420"
+              prefHeight="350"
+              AnchorPane.topAnchor="60"
+              AnchorPane.leftAnchor="90"
+              AnchorPane.rightAnchor="90"
+              style="
+                  -fx-background-color: rgba(255,255,255,0.75);
+                  -fx-background-radius: 20;
+                  -fx-padding: 30 40 40 40;
+              ">
+            <effect>
+                <DropShadow radius="20" offsetY="4" color="rgba(0,0,0,0.25)"/>
+            </effect>
 
-            <children>
+            <Label fx:id="lblTitle"
+                   text="Profil"
+                   style="-fx-font-size: 22px; -fx-font-weight: bold;"/>
 
-                <Label text="Profil"
-                       style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
+            <ImageView fx:id="imgAvatar"
+                       fitHeight="90" fitWidth="90"
+                       preserveRatio="true">
+                <image>
+                    <Image url="@images/profil_icon.jpg"/>
+                </image>
+            </ImageView>
 
-                <HBox alignment="TOP_LEFT" spacing="15.0">
-                    <children>
+            <VBox alignment="CENTER" spacing="5">
+                <children>
+                    <Label fx:id="txtUsername"
+                           text="Kullanıcı Adı"
+                           style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
 
-                        <ImageView fx:id="imgAvatar"
-                                   fitHeight="80.0"
-                                   fitWidth="80.0"
-                                   pickOnBounds="true"
-                                   preserveRatio="true">
-                            <image>
-                                <Image url="@images/profil_icon.jpg"/>
-                            </image>
-                        </ImageView>
+                    <Label fx:id="txtEmail"
+                           text="email@example.com"
+                           style="-fx-font-size: 14px; -fx-text-fill: #444;"/>
+                </children>
+            </VBox>
 
-                        <VBox alignment="TOP_LEFT" spacing="5.0">
-                            <children>
-                                <Label fx:id="txtUsername"
-                                       text="Kullanıcı adı"
-                                       style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
-                                <Label fx:id="txtEmail"
-                                       text="email@example.com"
-                                       style="-fx-font-size: 14px;"/>
-                            </children>
-                        </VBox>
+            <Button fx:id="btnBack"
+                    text="Ana Menüye Dön"
+                    onAction="#onBackClick"
+                    prefWidth="200"
+                    style="
+                        -fx-background-radius: 20;
+                        -fx-background-color: linear-gradient(to right, #6c5ce7, #a29bfe);
+                        -fx-text-fill: white;
+                        -fx-font-weight: bold;
+                        -fx-padding: 8 20;
+                    ">
+                <effect>
+                    <DropShadow color="#6c5ce780" offsetY="3" radius="8"/>
+                </effect>
+            </Button>
 
-                    </children>
-                </HBox>
-
-                <Label text=""
-                       wrapText="true"
-                       style="-fx-text-fill: #555555;"/>
-
-                <Button fx:id="btnBack"
-                        text="Ana Menüye Dön"
-                        onAction="#onBackClick"
-                        prefWidth="180"
-                        prefHeight="40"
-                        style="
-                            -fx-background-color: linear-gradient(to right, #6c5ce7, #a29bfe);
-                            -fx-text-fill: white;
-                            -fx-background-radius: 20;
-                            -fx-font-weight: bold;
-                            -fx-cursor: hand;
-                        ">
-                    <effect>
-                        <DropShadow color="#6c5ce780" offsetY="3" radius="8"/>
-                    </effect>
-                </Button>
-            </children>
         </VBox>
+
     </children>
 </AnchorPane>
